--- a/mybookstore/src/assets/styles/index.css
+++ b/mybookstore/src/assets/styles/index.css
@@ -106,10 +106,18 @@ table th {
 .carousel-background {
   background-color: #0c0607;
 background-image: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%);
-border-radius: 50px;
+border-top-left-radius: 50px;  /* Rounds the top-left corner */
+border-bottom-right-radius: 50px; /* Rounds the top-right corner */
+border: 2px solid #e7aaaa;
+
 overflow: hidden;
   
 }
+
+.how-it-works-background {
+border: 2px solid #e7aaaa;
+}
+
 
 .user-carousel-background {
   background-color: #0c0607;
